syntax = "proto3";
package pb;

option go_package = "example.com/textprocessor/services/wordsprocessor/generated/pb";

message TextData {
  string text = 1;
}